changed colors and adapted to some screen sizes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 			<header>
-				<img src="https://avatars.githubusercontent.com/u/17787601?v=4"/>
+				<img class="hvr-glow" src="https://avatars.githubusercontent.com/u/17787601?v=4"/>
 				<div class="desc-box">
 					<h2>Welcome to my page!</h2>
 					My name is Fahad and I'm a 24-year-old computer science engineering
@@ -31,15 +31,15 @@
 					message on LinkedIn for any queries.
 				</div>
 				<div class="social">
-					<div class="link">
+					<div class="hvr-back-pulse">
 						<a href="https://github.com/McFrappe">
-							<img src="./images/github.svg" alt="github" width="20"/>
+							<img class="icon" src="./images/github.svg" alt="github" width="20"/>
 							GitHub
 						</a>
 					</div>
-					<div class="link">
+					<div class="hvr-back-pulse">
 						<a href="https://www.linkedin.com/in/fahad-jamil-26b16a163/">
-							<img src="./images/linkedin.svg" alt="linkedin" width="20"/>
+							<img class="icon" src="./images/linkedin.svg" alt="linkedin" width="20"/>
 							LinkedIn
 						</a>
 					</div>
