--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Fahad Jamil</title>
+        <title>Fahad</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
