feat: updated contents

--- a/index.html
+++ b/index.html
@@ -2,31 +2,45 @@
     <head>
         <title>Fahad</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="effects.css">
     </head>
     <body>
-        <div class="center-container">
-            <img class="fahad-icon" src="fahad.jpeg" alt="Fahad">
+        <div class="glass">
+            <div class="center-container">
+                <img class="fahad-icon" src="fahad.jpeg" alt="Fahad">
+            </div>
+            <br/><br/>
+            Fahad Jamil's home on the internet...
+            <br/><br/>
+            I am a 24-year-old engineering student studying at
+            <a href="https://www.uu.se/en/study/programme?query=TIT2Y">Uppsala University</a>
+            in Sweden. My program focuses on information
+            technology, and I am pursuing a master's degree with a
+            specialization in
+            <a href="https://www.uu.se/en/study/programme/masters-programme-embedded-systems">embedded systems</a>.
+            <br/><br/>
+            check out <a href="https://github.com/mcfrappe">my Github</a> and
+            <a href="https://linkedin.com/in/fahadjamil06">my linkedin</a>
+            <br/><br/>
+            Heres a nice song:
+            <br/><br/>
+            <iframe allow="autoplay *; encrypted-media *;"
+                    frameborder="0"
+                    height="150"
+                    style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+                    sandbox="allow-forms
+                                allow-popups
+                                allow-same-origin
+                                allow-scripts
+                                allow-storage-access-by-user-activation
+                                allow-top-navigation-by-user-activation"
+                    src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
+            </iframe>
         </div>
-        <br/><br/>
-        Fahad Jamil's home on the internet...
-        <br/><br/>
-        check out <a href="https://github.com/mcfrappe">my Github</a> and <a href="https://linkedin.com/in/fahadjamil06">my linkedin</a>
-        <br/><br/>
-        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
-                frameborder="0"
-                height="200"
-                style="width:100%;max-width:100%;overflow:hidden;"
-                sandbox="allow-forms
-                         allow-popups
-                         allow-same-origin
-                         allow-scripts
-                         allow-storage-access-by-user-activation
-                         allow-top-navigation-by-user-activation
-                         allow-fullscreen"
-                src="https://embed.music.apple.com/se/album/overdrive/1688021170?i=1688022215&l=en-GB">
-        </iframe>
-        <div class="gif-container">
-            <img src="mario_relaxing.gif" alt="Mario Relaxing">
-        </div>
+        <footer>
+            <div class="gif-container">
+                <img src="mario_relaxing.gif" alt="Mario Relaxing">
+            </div>
+        </footer>
     </body>
 </html>
