--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Fahad</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel="stylesheet" type="text/css" href="effects.css">
     </head>
     <body>
         <div class="glass">
@@ -24,18 +25,20 @@
             <br/><br/>
             Heres a nice song:
             <br/><br/>
-            <iframe allow="autoplay *; encrypted-media *;"
-                    frameborder="0"
-                    height="150"
-                    style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
-                    sandbox="allow-forms
-                                allow-popups
-                                allow-same-origin
-                                allow-scripts
-                                allow-storage-access-by-user-activation
-                                allow-top-navigation-by-user-activation"
-                    src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
-            </iframe>
+            <div class="center-container">
+                <iframe allow="autoplay *; encrypted-media *;"
+                        frameborder="0"
+                        height="150"
+                        style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+                        sandbox="allow-forms
+                                 allow-popups
+                                 allow-same-origin
+                                 allow-scripts
+                                 allow-storage-access-by-user-activation
+                                 allow-top-navigation-by-user-activation"
+                        src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
+                </iframe>
+            </div>
         </div>
         <footer>
             <div class="gif-container">
