--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" media="(prefers-color-scheme: light)" content="rgb(246, 246, 246)" />
+        <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(40, 40, 40)" />
         <title>Fahad</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -31,11 +33,11 @@
                         height="150"
                         style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
                         sandbox="allow-forms
-                                   allow-popups
-                                   allow-same-origin
-                                   allow-scripts
-                                   allow-storage-access-by-user-activation
-                                   allow-top-navigation-by-user-activation"
+                                    allow-popups
+                                    allow-same-origin
+                                    allow-scripts
+                                    allow-storage-access-by-user-activation
+                                    allow-top-navigation-by-user-activation"
                         src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
                 </iframe>
             </div>
