--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
                 <img class="fahad-icon" src="fahad.jpeg" alt="Fahad">
             </div>
             <br/><br/>
-            Fahad Jamil's home on the internet...
-            <br/><br/>
+            <h2> Fahad Jamil's home on the internet...  </h2>
             I am a 24-year-old engineering student studying at
             <a href="https://www.uu.se/en/study/programme?query=TIT2Y">Uppsala University</a>
             in Sweden. My program focuses on information
@@ -22,25 +21,25 @@
             specialization in
             <a href="https://www.uu.se/en/study/programme/masters-programme-embedded-systems">embedded systems</a>.
             <br/><br/>
-            check out <a href="https://github.com/mcfrappe">my Github</a> and
-            <a href="https://linkedin.com/in/fahadjamil06">my linkedin</a>
+            Check out <a href="https://github.com/mcfrappe">my Github</a> and
+            <a href="https://linkedin.com/in/fahadjamil06">my LinkedIn</a>
+            <br/><br/>
+            You can also checkout my work and experiences <a href="experience.html">here</a>.
             <br/><br/>
             Heres a nice song:
             <br/><br/>
-            <div class="center-container">
-                <iframe allow="autoplay *; encrypted-media *;"
-                        frameborder="0"
-                        height="150"
-                        style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
-                        sandbox="allow-forms
-                                    allow-popups
-                                    allow-same-origin
-                                    allow-scripts
-                                    allow-storage-access-by-user-activation
-                                    allow-top-navigation-by-user-activation"
-                        src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
-                </iframe>
-            </div>
+            <iframe class="center-container"
+                    allow="autoplay *; encrypted-media *;"
+                    frameborder="0"
+                    style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+                    sandbox="allow-forms
+                                        allow-popups
+                                        allow-same-origin
+                                        allow-scripts
+                                        allow-storage-access-by-user-activation
+                                        allow-top-navigation-by-user-activation"
+                    src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
+            </iframe>
         </div>
         <footer>
             <div class="gif-container">
