--- a/index.html
+++ b/index.html
@@ -26,20 +26,21 @@
             <br/><br/>
             You can also checkout my work and experiences <a href="experience.html">here</a>.
             <br/><br/>
-            Heres a nice song:
+            Here's a nice song:
             <br/><br/>
-            <iframe class="center-container"
-                    allow="autoplay *; encrypted-media *;"
-                    frameborder="0"
-                    style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
-                    sandbox="allow-forms
-                                        allow-popups
-                                        allow-same-origin
-                                        allow-scripts
-                                        allow-storage-access-by-user-activation
-                                        allow-top-navigation-by-user-activation"
-                    src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
-            </iframe>
+            <div class="center-container">
+                <iframe allow="autoplay *; encrypted-media *;"
+                        frameborder="0"
+                        style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+                        sandbox="allow-forms
+                                         allow-popups
+                                         allow-same-origin
+                                         allow-scripts
+                                         allow-storage-access-by-user-activation
+                                         allow-top-navigation-by-user-activation"
+                        src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
+                </iframe>
+            </div>
         </div>
         <footer>
             <div class="gif-container">
