docs: added text

--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" media="(prefers-color-scheme: light)" content="rgb(246, 246, 246)" />
-        <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(40, 40, 40)" />
-        <title>Fahad</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-    <body>
-        <div class="glass">
-            <div class="center-container">
-                <img class="fahad-icon" src="fahad.jpeg" alt="Fahad">
-            </div>
-            <br/><br/>
-            <h2> Fahad Jamil's home on the internet...  </h2>
-            I am a 24-year-old engineering student studying at
-            <a href="https://www.uu.se/en/study/programme?query=TIT2Y">Uppsala University</a>
-            in Sweden. My program focuses on information
-            technology, and I am pursuing a master's degree with a
-            specialization in
-            <a href="https://www.uu.se/en/study/programme/masters-programme-embedded-systems">embedded systems</a>.
-            <br/><br/>
-            Check out <a href="https://github.com/mcfrappe">my Github</a> and
-            <a href="https://linkedin.com/in/fahadjamil06">my LinkedIn</a>
-            <br/><br/>
-            You can also checkout my work and experiences <a href="experience.html">here</a>.
-            <br/><br/>
-            Here's a nice song:
-            <br/><br/>
-            <div class="center-container">
-                <iframe allow="autoplay *; encrypted-media *;"
-                        frameborder="0"
-                        style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
-                        sandbox="allow-forms
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="rgb(246, 246, 246)" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(40, 40, 40)" />
+    <title>Fahad</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+    <div class="glass">
+        <div class="center-container">
+            <img class="fahad-icon" src="fahad.jpeg" alt="Fahad">
+        </div>
+        <br /><br />
+        <h2> Fahad Jamil's home on the internet... </h2>
+        I am a 24-year-old engineering student studying at
+        <a href="https://www.uu.se/en/study/programme?query=TIT2Y">Uppsala University</a>
+        in Sweden. My program focuses on information
+        technology, and I am pursuing a master's degree with a
+        specialization in
+        <a href="https://www.uu.se/en/study/programme/masters-programme-embedded-systems">embedded systems</a>.
+        <br /><br />
+        Check out <a href="https://github.com/mcfrappe">my Github</a> and
+        <a href="https://linkedin.com/in/fahadjamil06">my LinkedIn</a>
+        <br /><br />
+        You can also checkout my work and experiences <a href="experience.html">here</a>.
+        <br /><br />
+        Here's a nice song:
+        <br /><br />
+        <div class="center-container">
+            <iframe allow="autoplay *; encrypted-media *;" frameborder="0"
+                style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms
                                          allow-popups
                                          allow-same-origin
                                          allow-scripts
                                          allow-storage-access-by-user-activation
                                          allow-top-navigation-by-user-activation"
-                        src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
-                </iframe>
-            </div>
+                src="https://embed.music.apple.com/se/album/sundown/1592538505?i=1592538507&l=en-GB">
+            </iframe>
         </div>
-        <footer>
-            <div class="gif-container">
-                <img src="mario_relaxing.gif" alt="Mario Relaxing">
-            </div>
-        </footer>
-    </body>
+    </div>
+    <footer>
+        <div class="gif-container">
+            <img src="mario_relaxing.gif" alt="Mario Relaxing">
+        </div>
+    </footer>
+</body>
+
 </html>
