feat: fixed for mobile

--- a/experience.html
+++ b/experience.html
@@ -136,7 +136,7 @@
     <div class="middle-placer"></div>
     <footer>
         <div class="gif-container">
-            <img src="mario_sleeping.gif" alt="Mario sleeping">
+            <img src="images/mario_sleeping.gif" alt="Mario sleeping">
         </div>
     </footer>
 </body>
