--- a/experience.html
+++ b/experience.html
@@ -38,7 +38,10 @@
                     <p class="timeline-year">2023 Jun-Aug </p>
                     <h3>Software Engineer Intern @ <a href="www.slb.com">SLB</a> (f.k.a Schlumberger)</h3>
                     <h4>Location: Stavanger, Norway &#x1F1F3;&#x1F1F4;</h4>
-                    <p>-</p>
+                    <p>Developed a prototype for visualisation of 4D seismic - seismic interpretation over time - in
+                        Subsurface Framework Building (SFB) application.</p>
+                    <b>Tags: </b> C#, C, C++, Data Structures, Azure DevOps Services, Visual Studio, Agile
+                    Methodologies, 3D Visualization, Unity, Git
                 </div>
             </div>
             <br /> <br />
